--- a/app/src/main/res/layout/activity_dodaj_nowe_miejsce.xml
+++ b/app/src/main/res/layout/activity_dodaj_nowe_miejsce.xml
@@ -6,6 +6,53 @@
     android:layout_height="match_parent"
     tools:context="pl.edu.pjwstk.pawelkaminski.proj4smb.geolokacja.DodajNoweMiejsce">
 
+    <TextView
+        android:text="Nazwa nowego punktu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/textView"
+        android:layout_alignParentEnd="true" />
 
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:ems="10"
+        android:layout_below="@+id/textView"
+        android:layout_alignParentStart="true"
+        android:id="@+id/Nazwa"
+        android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:text="Opis"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/Nazwa"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="18dp"
+        android:id="@+id/OpisTextView"
+        android:layout_alignParentEnd="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:ems="10"
+        android:layout_below="@+id/OpisTextView"
+        android:layout_alignParentStart="true"
+        android:id="@+id/Opis"
+        android:layout_alignParentEnd="true" />
+
+    <Button
+        android:text="Dodaj nowy punkt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/ZapiszPunkt"
+        android:onClick="DodajPunkt"
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
